# data-migrator

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX_IMPLEMENTATION_SUMMARY.md  CRITICAL_BUG_FIX.md  DEVELOPMENT.md  DIRECTORY_TREE.txt  DISCONNECTED_FRONTEND_FEATURES.md  END_TO_END_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INCOMPLETE_FEATURES.md  Leads (1).xlsx  MAPPING_SYSTEM_ARCHITECTURE.md  MCP_ENHANCEMENTS.md  MCP_IMPLEMENTATION_SUMMARY.md  MISSING_MODELS_DECISION_REQUIRED.md  README.md  SESSION_SUMMARY.md  SETUP.md  SPRINT_FIXES.md  Schedule_List_All Listed Jobs '25 (2).xlsx  TEMPLATE_SYSTEM.md  TODO.md  VM 1 - Contacts.xlsx  WEB_CHAT_INTEGRATION.md  messy_leads_data.csv  test_customers.csv
backend/: .env.example  FIELD_MAPPER_CLEANUP.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.md  Makefile  alembic.ini  check_columns.py  check_fleet_module.py  check_sale_order_fields.py  check_what_modules_exist.py  inspect_excel.py  list_columns.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_compound_names.py  test_full_lambda_integration.py  test_improved_mapper.py  test_lambda_polars.py  test_module_selection.py  test_new_matcher.py  test_real_split.py  test_with_actual_files.py
backend/alembic/: env.py
backend/alembic/versions/: 05de05e08552_add_custom_field_definition_to_mappings.py  1760583762_create_exceptions_table.py  26ec48b04825_add_graph_run_context_columns.py  29d0cfa904f6_add_vocab_policy_tables.py  5a5d45c79acc_add_enhanced_fields_to_keymap.py  5c236e0abf77_add_module_selection_to_datasets.py  654c378c4698_add_odoo_connections_table.py  776044534d04_add_cleaned_data_tracking_to_dataset.py  8204a2bbd178_initial_schema.py  83f79d2102e8_add_import_ledger_tables.py  87de087c7195_add_company_id_to_datasets.py  9dc2e307bf83_add_match_method_to_mapping.py  a1f801fbf689_sync_enum_values_to_lowercase.py  abc123def456_add_graphs_and_graph_runs_tables.py  c12af2b81ceb_add_lambda_transformation_fields_to_.py  dac0ae457af7_add_canonical_schema_tables.py  ebbbff79c085_add_detection_fields_to_column_profile.py  fcd5edb73bc7_seed_default_vocab_policies.py
backend/app/: main.py
backend/app/adapters/: __init__.py  repositories_sqlite.py  tasks_inline.py
backend/app/api/: addons.py  assistant.py  datasets.py  exceptions.py  exports.py  graphs.py  health.py  imports.py  mappings.py  odoo.py  operations.py  sheets.py  templates.py  transforms.py
backend/app/cleaners/: __init__.py  base.py  config.py  data_cleaner.py  report.py
backend/app/connectors/: odoo.py
backend/app/core/: celery_app.py  config.py  data_cleaner.py  database.py  field_detector.py  hybrid_matcher.py  ids.py  lambda_transformer.py  matcher.py  normalization.py  odoo_field_mappings.py  odoo_synonyms.py  profiler.py  task_runner.py  transformer.py  transformer_enhanced.py  type_system.py
backend/app/export/: __init__.py  csv_emitter.py  idgen.py  order.py
backend/app/field_mapper/: README.md  example_usage.py  main.py
backend/app/generators/: addon.py
backend/app/importers/: executor.py  graph.py
backend/app/models/: __init__.py  canonical.py  exception.py  graph.py  ledger.py  mapping.py  odoo_connection.py  profile.py  run.py  source.py  vocab.py
backend/app/ports/: __init__.py  repositories.py  tasks.py
backend/app/registry/: __init__.py  loader.py
backend/app/schemas/: dataset.py  exception.py  export.py  graph.py  mapping.py  run.py  template.py
backend/app/services/: addon_generator.py  collision_handler.py  column_signature.py  dataset_service.py  dependency_loader.py  export_service.py  graph_execute_service.py  graph_service.py  identity_resolution.py  import_service.py  import_tasks.py  mapping_service.py  odoo_field_service.py  odoo_migrate_export.py  operation_tracker.py  pivot_service.py  polymorphic_detector.py  profiler_tasks.py  quarantine_service.py  remap_engine.py  template_service.py  transform_service.py  validator_service.py  vocab_service.py
backend/app/transform/: __init__.py  normalizers.py  rules.py
backend/app/validate/: __init__.py  validator.py
backend/docs/architecture/: packages_DataMigrator.dot
backend/registry/: odoo.yaml
backend/registry/seeds/: crm_lost_reasons.yaml  crm_stages.yaml  teams_users.yaml  utm.yaml
backend/samples/: leads.csv  partners.csv
backend/templates/: accounting.json  complete_migration.json  essential_setup.json  projects.json  sales_crm.json
backend/tests/: README.md  __init__.py  conftest.py  test_csv_emitter.py  test_determinism.py  test_example_api.py  test_example_units.py  test_frontend_integration.py  test_graph_execution.py  test_graph_plumbing.py  test_mapping_application.py  test_normalizers.py  test_registry_loader.py  test_regression_flows.py  test_render_id.py  test_validator.py
backend/tests/api/: conftest.py  test_mappings_api.py
backend/tests/matcher_validation/: ACHIEVEMENT_REPORT.md  COMPARISON_REPORT.md  COMPREHENSIVE_PRECLEANING_REPORT.md  COMPREHENSIVE_RESULTS.md  DATA_TRANSFORMATION_REPORT.md  FINAL_VALIDATION_REPORT.md  GAP_ANALYSIS_REPORT.md  MESSY_LEADS_REPORT.md  PHASE_1B_RESULTS.md  PRECLEANING_IMPACT_REPORT.md  README.md  SUMMARY.md  TESTING_PLAN.md  VM1_CONTACTS_REPORT.md  conftest.py  diagnose_failures.py  ground_truth.py  ground_truth_messy.py  run_validation.sh  strategy_analyzer.py  test_comprehensive_with_cleaning.py  test_data_transformation.py  test_enhanced_transforms.py  test_harness.py  test_hybrid_comprehensive.py  test_hybrid_matcher.py  test_messy_data_validation.py  test_messy_leads_data.py  test_precleaning_impact.py  test_simple_matcher.py  test_vm1_contacts.py
backend/tests/services/: test_mapping_service.py
docs/: LOAD_ORDER.md  (+5 more)
(+137 files in other folders)
