[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-migrator"
version = "0.1.0"
description = "Intelligent data migration platform for importing spreadsheets into Odoo"
requires-python = ">=3.11"

# ===========================
# Black - Code Formatter
# ===========================
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | alembic/versions
)/
'''

# ===========================
# Ruff - Fast Python Linter
# ===========================
[tool.ruff]
line-length = 100
target-version = "py311"

# Exclude directories
extend-exclude = [
    "alembic/versions",
    "venv",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
# Enable rules:
# E = pycodestyle errors
# F = Pyflakes
# I = isort (import sorting)
# N = pep8-naming
# UP = pyupgrade (modernize code)
# B = flake8-bugbear (find likely bugs)
# C4 = flake8-comprehensions (better comprehensions)
# DTZ = flake8-datetimez (datetime bugs)
# T10 = flake8-debugger (no debugger)
# EM = flake8-errmsg (better error messages)
# ISC = flake8-implicit-str-concat
# ICN = flake8-import-conventions
# PIE = flake8-pie (misc lints)
# PT = flake8-pytest-style
# Q = flake8-quotes
# RSE = flake8-raise
# RET = flake8-return
# SIM = flake8-simplify
# TID = flake8-tidy-imports
# ARG = flake8-unused-arguments
# PTH = flake8-use-pathlib
# PL = Pylint
# TRY = tryceratops (exception handling)
# RUF = Ruff-specific rules
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "RUF",
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by Black)
    "B008",    # Do not perform function call in argument defaults (FastAPI Depends)
    "PLR0913", # Too many arguments to function call
    "TRY003",  # Avoid specifying long messages outside exception class
    "EM101",   # Exception must not use a string literal (conflicts with FastAPI)
    "EM102",   # Exception must not use an f-string literal
]

# Allow fix for all enabled rules (when safe)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore import rules in __init__.py files
"__init__.py" = ["F401", "F403"]
# Ignore specific rules in tests
"tests/**/*.py" = ["ARG", "PLR2004", "S101"]
# Ignore specific rules in alembic migrations
"alembic/**/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ===========================
# mypy - Static Type Checker
# ===========================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

# Exclude directories
exclude = [
    'venv/',
    '.venv/',
    'alembic/versions/',
]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "celery.*",
    "pandas.*",
    "openpyxl.*",
    "duckdb.*",
    "polars.*",
    "pandera.*",
    "rapidfuzz.*",
    "anthropic.*",
    "factory.*",
    "faker.*",
    "networkx.*",
    "pygtrie.*",
    "cachetools.*",
]
ignore_missing_imports = true

# ===========================
# pytest - Testing Framework
# ===========================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",              # Show summary of all test outcomes
    "--strict-markers", # Strict marker registration
    "--strict-config",  # Strict config parsing
    "--showlocals",     # Show local variables in tracebacks
    "-v",               # Verbose output
]
asyncio_mode = "auto"

# Test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async",
]

# Coverage settings
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ===========================
# Bandit - Security Linter
# ===========================
[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    "alembic/versions",
]
skips = [
    "B101",  # assert_used - we use assertions in tests
    "B601",  # paramiko_calls - if we use paramiko, it's intentional
]
